5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1836_1274.log
== TEST (2019-06-27 10:32:10) 
-- CODE:
from numpy import*
n = int(input("dIMENSÃO DA MATRIZ: "))
mat = zeros((n,n), dtype=int)
k = 1
for i in range(n):
	for j in range (n):
		if (i==j):
			mat[i,j]= k
			k= k+1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:32:20) 
-- CODE:
from numpy import*
n = int(input("dIMENSaO DA MATRIZ: "))
mat = zeros((n,n), dtype=int)
k = 1
for i in range(n):
	for j in range (n):
		if (i==j):
			mat[i,j]= k
			k= k+1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:36:30) 
-- CODE:
from numpy import*
n = int(input("dIMENSaO DA MATRIZ: "))
mat =((n,n), dtype=int)

for x in range(n):
	for y in range (n):
		if (x<y):
			mat[i,j]= x+1
		elif (y>x):
			mat[x,y]=y+1
		else:
			mat[x,y]=y+1
print(mat)
			
		
-- ERROR:
File "XXXX", line 3
    mat =((n,n), dtype=int)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:36:39) 
-- CODE:
from numpy import*
n = int(input("dIMENSaO DA MATRIZ: "))
mat =ones((n,n), dtype=int)

for x in range(n):
	for y in range (n):
		if (x<y):
			mat[i,j]= x+1
		elif (y>x):
			mat[x,y]=y+1
		else:
			mat[x,y]=y+1
print(mat)
			
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:36:52) 
-- CODE:
from numpy import*
n = int(input("dIMENSaO DA MATRIZ: "))
mat =ones((n,n), dtype=int)

for x in range(n):
	for y in range (n):
		if (x<y):
			mat[x,y]= x+1
		elif (y>x):
			mat[x,y]=y+1
		else:
			mat[x,y]=y+1
print(mat)
			
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:37:03) 
-- CODE:
from numpy import*
n = int(input("dIMENSaO DA MATRIZ: "))
mat =ones((n,n), dtype=int)

for x in range(n):
	for y in range (n):
		if (x<y):
			mat[x,y]= x+1
		elif (y>x):
			mat[x,y]=y+1
		else:
			mat[x,y]=y+1
print(mat)
			
		
-- EXECUTION TIME:
1.05412
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
